Change notebook title

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -5,7 +5,7 @@
    "id": "daf555ee-8d7d-452f-85be-e7fd2c754308",
    "metadata": {},
    "source": [
-    "# XGBoost notebook\n",
+    "# Gradient Boosting with XGBoost\n",
     "\n",
     "## Overview\n",
     "\n",
