Added exercise for reader

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -534,7 +534,11 @@
    "id": "5b575201-b8a6-4aaf-b6ed-a482353ae5f0",
    "metadata": {},
    "source": [
-    "Since these variables are very highly correlated, it is possible that the XGBoost models are using `q2` as a proxy for 2m temperature. This could imply that `q2` is measured more accurately than `t2`, in which case it might be a more reliable indicator of the true 2m temperature than the feature `t2`."
+    "Since these variables are very highly correlated, it is possible that the XGBoost models are using `q2` as a proxy for 2m temperature. This could imply that `q2` is measured more accurately than `t2`, in which case it might be a more reliable indicator of the true 2m temperature than the feature `t2`.\n",
+    "\n",
+    "## Exercise for the interested reader\n",
+    "\n",
+    "So far, we have only trained models to predict the sensible heat flux $H_s$. Go back to [Model training](#Model-training) and choose a different target variable to predict (latent heat flux $H_l$ or friction velocity $u_\\star$). How does XGBoost perform for those target variables? (Hint: use a scale-free performance metric such as R<sup>2</sup> to compare models where the targets have different units). What are some good hyperparameter configurations? The friction velocity $u_\\star$ is a strictly positive quantity. What implications does that have for training a machine-learning model, in particular XGBoost?"
    ]
   }
  ],
